# ClaudeWrapper

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  build.sh  cliff.toml  deny.toml  justfile
crates/term_input/src/: lib.rs  macos_modifiers.rs  reader.rs
docs/: THINKING_MODES_DESIGN.md  THINKING_TRANSFORMER_ARCHITECTURE.md  error-handling-design.md  ratatui-scaffold.md  refactor_plan.md  subagent-backend-spec.md  subagent-session-affinity-spec.md
docs/analysis/: pipeline-unification-review.md  thinking-registry-issues.md
docs/architecture/: thinking-blocks.md
docs/design/: agent-team-routing.md  agent-teams-integration.md  argument-handling-redesign.md  backend-selector-popup.md  cl-bwsij-keyboard-nav-highlight.md  clipboard-shortcuts.md  config-hot-reload.md  debug-mode-request-logging.md  e2e-testing.md  env-injection-claude-code.md  error-handling-timeouts.md  graceful-shutdown.md  image-clipboard-paste.md  ipc-layer.md  lazy-strip-with-retry.md  network-diagnostics-popup.md  observability-infrastructure.md  reverse-model-mapping.md  thinking-block-compat.md  wire-all-components.md
src/: clipboard.rs  lib.rs  main.rs  shutdown.rs  sse.rs
src/args/: assembler.rs  classifier.rs  env_builder.rs  mod.rs  pipeline.rs  registry.rs  session.rs
src/backend/: mod.rs  state.rs
src/config/: auth.rs  claude_settings.rs  credentials.rs  loader.rs  mod.rs  store.rs  types.rs  watcher.rs
src/ipc/: client.rs  mod.rs  server.rs  tests.rs  types.rs
src/metrics/: debug_logger.rs  mod.rs  redaction.rs  request_parser.rs  span.rs  stream.rs
src/proxy/: error.rs  health.rs  hooks.rs  mod.rs  router.rs  routing.rs  server.rs  shutdown.rs  thinking.rs  tracing.rs  upstream.rs
src/proxy/pipeline/: extract.rs  forward.rs  headers.rs  mod.rs  response.rs  routing.rs  thinking.rs  transform.rs
src/proxy/thinking/: context.rs  error.rs  mod.rs  native.rs  registry.rs  request_structure_tests.rs  sse_parser.rs  strip.rs  summarize.rs  summarizer.rs  traits.rs
src/pty/: command.rs  handle.rs  hotkey.rs  manager.rs  mod.rs  resize.rs  screen.rs  session.rs  spawn_config.rs  vt.rs
src/pty/emulator/: alacritty_impl.rs  mod.rs  vt100_impl.rs
src/shim/: mod.rs  tmux.rs
src/ui/: app.rs  events.rs  footer.rs  header.rs  input.rs  layout.rs  mod.rs  popup.rs  pty_state.rs  render.rs  runtime.rs  selection.rs  terminal.rs  terminal_guard.rs  theme.rs
src/ui/history/: dialog.rs  state.rs
src/ui/mvi/: intent.rs  mod.rs  reducer.rs  state.rs
src/ui/pty/: intent.rs  mod.rs  reducer.rs  state.rs
src/ui/settings/: intent.rs  mod.rs  reducer.rs  state.rs
src/ui/summarization/: dialog.rs  intent.rs  mod.rs  reducer.rs  state.rs
tests/: app_lifecycle.rs  app_startup.rs  args_pipeline.rs  backend_state.rs  claude_settings_manager.rs  cli_args.rs  concurrent_port_binding.rs  config_auth.rs  config_credentials.rs  config_loader.rs  e2e_workflow.rs  integration_health.rs  ipc.rs  pipeline_integration.rs  pipeline_isolation.rs  pipeline_stages.rs  provider_thinking_compat.rs  proxy_backend_switch.rs  proxy_retry.rs  proxy_streaming.rs  pty_passthrough.rs  pty_reducer.rs  request_parser_test.rs  restart_claude.rs  reverse_model_mapping.rs  session_token_auth.rs  settings_persistence.rs  settings_reducer.rs  shim.rs  spawn_config.rs  spawn_env_corner_cases.rs  subagent_session_affinity.rs  test_health_endpoint.rs  test_shutdown.rs  test_sse_streaming.rs  thinking_session.rs  word_selection.rs
tests/common/: mock_backend.rs  mod.rs
