[package]
name = "anyclaude"
version = "0.1.2"
edition = "2021"

[dependencies]
# PTY & Terminal
portable-pty = "0.9"
vt100 = "0.16"
crossterm = { version = "0.29", features = ["event-stream"] }
signal-hook = "0.4"

# TUI
ratatui = "0.30"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "signal", "time"] }
uuid = { version = "1.20", features = ["v4"] }

# HTTP Proxy
axum = { version = "0.8", features = ["json"] }
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "http2"] }
tower = "0.5"
futures-core = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dirs = "6.0"
thiserror = "2.0"
fs2 = "0.4"

# Concurrency
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# Utilities
scopeguard = "1.2"
libc = "0.2"

# Clipboard
arboard = { version = "3.6", default-features = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
anyhow = "1.0.100"

[dev-dependencies]
tempfile = "3.24"
