[workspace]
members = [".", "crates/term_input"]

[workspace.lints.rust]
dead_code = "deny"
unused_imports = "deny"
unreachable_code = "deny"

[package]
name = "anyclaude"
version = "0.3.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
# PTY & Terminal
portable-pty = "0.9"
alacritty_terminal = "0.25"
crossterm = "0.29"
signal-hook = "0.4"
term_input = { path = "crates/term_input" }

# TUI
ratatui = "0.30"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "signal", "time"] }
uuid = { version = "1.20", features = ["v4"] }

# HTTP Proxy
axum = { version = "0.8", features = ["json"] }
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "http2", "gzip", "brotli", "deflate"] }
tower = "0.5"
futures-core = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dirs = "6.0"
thiserror = "2.0"
fs2 = "0.4"

# Concurrency
parking_lot = "0.12"

# Utilities
scopeguard = "1.2"
libc = "0.2"

# Clipboard
arboard = { version = "3.6", default-features = true }

# Error handling
anyhow = "1.0.100"

# Temporary files
tempfile = "3.24"

[dev-dependencies]
tempfile = "3.24"
